# vinyl-kit

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  doc-improvements.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  vinylkit.spec
.azure/: deployment-plan.md
.claude/: settings.local.json
.github/workflows/: main_vinylkit-webapp.yml  release_vinylkit-cli.yml
.specify/memory/: constitution.md
Formula/: vinyl-kit.rb
docs/: auth.md  configuration.md  data-model.md  developer-guide.md  download.md  examples.md  quickstart.md  spec.md  tag-mapping.md  test-improvement-plan.md  user-guide.md
scoop/: vinylkit.json
scripts/: update_hashes.py
src/docs_web/: main.py
src/docs_web/static/: install.cmd  install.ps1  install.sh
src/docs_web/static/css/: style.css  syntax.css
src/docs_web/static/js/: main.js
src/docs_web/templates/: base.html
src/vinylkit/: __init__.py  __main__.py  cli.py  config.py  discogs.py  exceptions.py  models.py  naming.py  tagging.py  utils.py
src/vinylkit/commands/: __init__.py  _helpers.py  auth.py  cache.py  collection.py  config_cmd.py  migrate.py  tag.py
stubs/mutagen/: __init__.pyi  flac.pyi  mp3.pyi
stubs/mutagen/id3/: __init__.pyi  _frames.pyi
tests/: conftest.py  test_auth_logic.py  test_cache.py  test_cli.py  test_cli_commands.py  test_collisions.py  test_config_roundtrip.py  test_discogs.py  test_docs_web.py  test_edge_cases.py  test_examples_coverage.py  test_expanded_metadata.py  test_help.py  test_helpers.py  test_logging.py  test_migrate.py  test_naming.py  test_tagging.py  test_tagging_integration.py  test_tagging_modes.py  test_utils.py  test_version_sync.py
